# banner-of-life

./: Cargo.toml  LICENSE  README.md
examples/: README.md  index.html  index.js  package.json
src/: cells.rs  compound.rs  config.rs  evolve.rs  fonts.rs  game_of_life.rs  lib.rs  mold.rs  optimizer.rs  primes.rs  randomizer.rs
