[package]
name = "banner-of-life"
version = "0.1.1"
authors = ["YuichiroSato <sato.yu1ro@gmail.com>"]
description = "Game of life to display arbitrary strings"
repository = "https://github.com/YuichiroSato/banner-of-life"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
cfg-if = "0.1.2"
rand = { version = "0.6", features = ["wasm-bindgen"] }
wasm-bindgen = "0.2.37"
console_error_panic_hook = { version = "0.1.1", optional = true }
wee_alloc = { version = "0.4.2", optional = true }

[dependencies.web-sys]
version = "0.3.4"
features = [
  'CanvasRenderingContext2d',
  'Element',
  'Document',
  'HtmlCanvasElement',
  'Window',
]

[dev-dependencies]
wasm-bindgen-test = "0.2.37"

[profile.release]
opt-level = "s"
